fixing bugs, typos, and changing link of emails based on front end pages
